--- a/index.html
+++ b/index.html
@@ -294,28 +294,28 @@
                 <ul class="list team-card-menu">
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon" width="16" height="16" fill="f4f4fd">
+                      <svg class="" width="16" height="16" fill="f4f4fd">
                         <use href="./images/icons.svg#icon-instagram1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon" width="16" height="16" fill="f4f4fd">
+                      <svg class="" width="16" height="16" fill="f4f4fd">
                         <use href="./images/icons.svg#icon-twitter1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon" width="16" height="16" fill="f4f4fd">
+                      <svg class="" width="16" height="16" fill="f4f4fd">
                         <use href="./images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon" width="16" height="16" fill="f4f4fd">
+                      <svg class="" width="16" height="16" fill="f4f4fd">
                         <use href="./images/icons.svg#icon-linkedin1"></use>
                       </svg>
                     </a>
@@ -380,7 +380,7 @@
     <!-- footer -->
     <footer class="footer">
       <div class="container footer-container">
-        <div claass="footer-container-logo">
+        <div class="footer-container-logo">
           <a class="logo-web link logo-web-margin" href="./index.html"
             >Web<span class="logo-white link">Studio</span></a
           >
@@ -395,28 +395,28 @@
             <li class="footer-list">
               <a class="footer-item" href="" target="_blank" rel="noopener noreferrer">
                 <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram2"></use>
+                  <use href="./images/icons.svg#icon-instagram1"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-list">
               <a class="footer-item" href="" target="_blank" rel="noopener noreferrer">
                 <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-tweeter2"></use>
-                </svg>
-              </a>
-              </li>
-            <li class="footer-list">
-              <a class="footer-item" href="" target="_blank" rel="noopener noreferrer">
-                <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook2"></use>
+                  <use href="./images/icons.svg#icon-twitter1"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-list">
               <a class="footer-item" href="" target="_blank" rel="noopener noreferrer">
                 <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin2"></use>
+                  <use href="./images/icons.svg#icon-facebook1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-list">
+              <a class="footer-item" href="" target="_blank" rel="noopener noreferrer">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin1"></use>
                 </svg>
               </a>
             </li>
