--- a/portfolio.html
+++ b/portfolio.html
@@ -13,13 +13,19 @@
       rel="stylesheet"
     />
     <!-- Normalize -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- header -->
     <!-- header -->
-    <header class="header">
+     <header class="header">
       <div class="header-container container">
         <nav class="header-nav">
           <a class="logo-web link" href="./index.html"
@@ -37,7 +43,7 @@
             </li>
           </ul>
         </nav>
-        <address>
+        <address class="adress-nav">
           <ul class="list adress-menu">
             <li class="adress-item">
               <a
@@ -55,6 +61,7 @@
         </address>
       </div>
     </header>
+
 
     <!-- main -->
     <main>
@@ -199,15 +206,50 @@
       </section>
     </main>
     <!-- footer -->
-    <footer class="footer">
-      <div class="container">
-        <a class="logo-web link" href="./index.html"
-          >Web<span class="logo-white link">Studio</span></a
-        >
-        <p class="text-footer">
-          Increase the flow of customers and sales for your business with digital marketing & growth
-          solutions.
-        </p>
+   <footer class="footer">
+      <div class="container footer-container">
+        <div claass="footer-container-logo">
+          <a class="logo-web link logo-web-margin" href="./index.html"
+            >Web<span class="logo-white link">Studio</span></a
+          >
+          <p class="text-footer">
+            Increase the flow of customers and sales for your business with digital marketing &
+            growth solutions.
+          </p>
+        </div>
+        <div class="">
+          <p class="footer-text-social">Social media</p>
+          <ul class="footer-menu list">
+            <li class="footer-list">
+              <a class="footer-item" href="" target="_blank" rel="noopener noreferrer">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-list">
+              <a class="footer-item" href="" target="_blank" rel="noopener noreferrer">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-tweeter2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-list">
+              <a class="footer-item" href="" target="_blank" rel="noopener noreferrer">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-list">
+              <a class="footer-item" href="" target="_blank" rel="noopener noreferrer">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin2"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
