--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
   <body>
     <!-- header -->
     <!-- header -->
-     <header class="header">
+    <header class="header">
       <div class="header-container container">
         <nav class="header-nav">
           <a class="logo-web link" href="./index.html"
@@ -61,7 +61,6 @@
         </address>
       </div>
     </header>
-
 
     <!-- main -->
     <main>
@@ -206,9 +205,9 @@
       </section>
     </main>
     <!-- footer -->
-   <footer class="footer">
+     <footer class="footer">
       <div class="container footer-container">
-        <div claass="footer-container-logo">
+        <div class="footer-container-logo">
           <a class="logo-web link logo-web-margin" href="./index.html"
             >Web<span class="logo-white link">Studio</span></a
           >
@@ -223,28 +222,28 @@
             <li class="footer-list">
               <a class="footer-item" href="" target="_blank" rel="noopener noreferrer">
                 <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram2"></use>
+                  <use href="./images/icons.svg#icon-instagram1"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-list">
               <a class="footer-item" href="" target="_blank" rel="noopener noreferrer">
                 <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-tweeter2"></use>
+                  <use href="./images/icons.svg#icon-twitter1"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-list">
               <a class="footer-item" href="" target="_blank" rel="noopener noreferrer">
                 <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook2"></use>
+                  <use href="./images/icons.svg#icon-facebook1"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-list">
               <a class="footer-item" href="" target="_blank" rel="noopener noreferrer">
                 <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin2"></use>
+                  <use href="./images/icons.svg#icon-linkedin1"></use>
                 </svg>
               </a>
             </li>
