--- a/index.html
+++ b/index.html
@@ -178,28 +178,28 @@
                 <ul class="list team-card-menu">
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon" width="16" height="16" fill="f4f4fd">
+                      <svg class="" width="16" height="16" fill="f4f4fd">
                         <use href="./images/icons.svg#icon-instagram1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon" width="16" height="16" fill="f4f4fd">
+                      <svg class="" width="16" height="16" fill="f4f4fd">
                         <use href="./images/icons.svg#icon-twitter1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon" width="16" height="16" fill="f4f4fd">
+                      <svg class="" width="16" height="16" fill="f4f4fd">
                         <use href="./images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon" width="16" height="16" fill="f4f4fd">
+                      <svg class="" width="16" height="16" fill="f4f4fd">
                         <use href="./images/icons.svg#icon-linkedin1"></use>
                       </svg>
                     </a>
@@ -220,28 +220,28 @@
                 <ul class="list team-card-menu">
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon" width="16" height="16" fill="f4f4fd">
+                      <svg class="" width="16" height="16" fill="f4f4fd">
                         <use href="./images/icons.svg#icon-instagram1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon" width="16" height="16" fill="f4f4fd">
+                      <svg class="" width="16" height="16" fill="f4f4fd">
                         <use href="./images/icons.svg#icon-twitter1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon" width="16" height="16" fill="f4f4fd">
+                      <svg class="" width="16" height="16" fill="f4f4fd">
                         <use href="./images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon" width="16" height="16" fill="f4f4fd">
+                      <svg class="" width="16" height="16" fill="f4f4fd">
                         <use href="./images/icons.svg#icon-linkedin1"></use>
                       </svg>
                     </a>
@@ -257,28 +257,28 @@
                 <ul class="list team-card-menu">
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon" width="16" height="16" fill="f4f4fd">
+                      <svg class="" width="16" height="16" fill="f4f4fd">
                         <use href="./images/icons.svg#icon-instagram1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon" width="16" height="16" fill="f4f4fd">
+                      <svg class="" width="16" height="16" fill="f4f4fd">
                         <use href="./images/icons.svg#icon-twitter1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon" width="16" height="16" fill="f4f4fd">
+                      <svg class="" width="16" height="16" fill="f4f4fd">
                         <use href="./images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon" width="16" height="16" fill="f4f4fd">
+                      <svg class="" width="16" height="16" fill="f4f4fd">
                         <use href="./images/icons.svg#icon-linkedin1"></use>
                       </svg>
                     </a>
@@ -293,7 +293,7 @@
                 <p class="text-main text-team">UI Designer</p>
                 <ul class="list team-card-menu">
                   <li class="team-card-list">
-                    <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
+                    <a class="" href="" target="_blank" rel="noopener noreferrer">
                       <svg class="" width="16" height="16" fill="f4f4fd">
                         <use href="./images/icons.svg#icon-instagram1"></use>
                       </svg>
@@ -333,42 +333,42 @@
           <ul class="list customers-menu">
             <li class="customers-list">
               <a class="customers-item" href="" target="_blank" rel="noopener noreferrer">
-                <svg class="customers-icon" width="104" height="56">
+                <svg class="" width="104" height="56">
                   <use href="./images/icons.svg#icon-Client1"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list">
               <a class="customers-item" href="" target="_blank" rel="noopener noreferrer">
-                <svg class="customers-icon" width="104" height="56">
+                <svg class="" width="104" height="56">
                   <use href="./images/icons.svg#icon-Client2"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list">
               <a class="customers-item" href="" target="_blank" rel="noopener noreferrer">
-                <svg class="customers-icon" width="104" height="56">
+                <svg class="" width="104" height="56">
                   <use href="./images/icons.svg#icon-Client3"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list">
               <a class="customers-item" href="" target="_blank" rel="noopener noreferrer">
-                <svg class="customers-icon" width="104" height="56">
+                <svg class="" width="104" height="56">
                   <use href="./images/icons.svg#icon-Client4"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list">
               <a class="customers-item" href="" target="_blank" rel="noopener noreferrer">
-                <svg class="customers-icon" width="104" height="56">
+                <svg class="" width="104" height="56">
                   <use href="./images/icons.svg#icon-Client5"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list">
               <a class="customers-item" href="" target="_blank" rel="noopener noreferrer">
-                <svg class="customers-icon" width="104" height="56">
+                <svg class="" width="104" height="56">
                   <use href="./images/icons.svg#icon-Client6"></use>
                 </svg>
               </a>
@@ -394,28 +394,28 @@
           <ul class="footer-menu list">
             <li class="footer-list">
               <a class="footer-item" href="" target="_blank" rel="noopener noreferrer">
-                <svg class="footer-icon" width="24" height="24">
+                <svg class="" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram1"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-list">
               <a class="footer-item" href="" target="_blank" rel="noopener noreferrer">
-                <svg class="footer-icon" width="24" height="24">
+                <svg class="" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter1"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-list">
               <a class="footer-item" href="" target="_blank" rel="noopener noreferrer">
-                <svg class="footer-icon" width="24" height="24">
+                <svg class="" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook1"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-list">
               <a class="footer-item" href="" target="_blank" rel="noopener noreferrer">
-                <svg class="footer-icon" width="24" height="24">
+                <svg class="" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin1"></use>
                 </svg>
               </a>
