--- a/portfolio.html
+++ b/portfolio.html
@@ -13,13 +13,19 @@
       rel="stylesheet"
     />
     <!-- Normalize -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- header -->
     <!-- header -->
-     <header class="header">
+    <header class="header">
       <div class="header-container container">
         <nav class="header-nav">
           <a class="logo-web link" href="./index.html"
@@ -198,7 +204,7 @@
       </section>
     </main>
     <!-- footer -->
-     <footer class="footer">
+    <footer class="footer">
       <div class="container footer-container">
         <div class="footer-container-logo">
           <a class="logo-web link logo-web-margin" href="./index.html"
