--- a/portfolio.html
+++ b/portfolio.html
@@ -102,8 +102,8 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio-item">
-              <a class="list link" href="">
+            <li class="portfolio-list">
+              <a class="portfolio-item link" href="">
                 <img
                   src="./images/img2.jpg"
                   alt="Marketing Cashless Payment"
@@ -116,8 +116,8 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio-item">
-              <a class="list link" href="">
+            <li class="portfolio-list">
+              <a class="portfolio-item link" href="">
                 <img src="./images/img3.jpg" alt="App Meditation App" width="360" height="300" />
                 <div class="portfolio-card">
                   <h2 class="subtitle subtitle-card">Meditation App</h2>
@@ -125,8 +125,8 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio-item">
-              <a class="list link" href="">
+            <li class="portfolio-list">
+              <a class="portfolio-item link" href="">
                 <img
                   src="./images/img4.jpg"
                   alt="Marketing Taxi Service"
@@ -139,22 +139,22 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio-item">
-              <a class="list link" href="">
+            <li class="portfolio-list">
+              <a class="portfolio-item link" href="">
                 <img
                   src="./images/img5.jpg"
                   alt="Design Screen Illustrations"
                   width="360"
                   height="300"
                 />
-                <div class="portfolio-card">
+                <div class="portfolio-list">
                   <h2 class="subtitle subtitle-card"> Screen Illustrations </h2>
                   <p class="text-main text-card">Design</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-item">
-              <a class="list link" href="">
+            <li class="portfolio-list">
+              <a class="portfolio-item link" href="">
                 <img
                   src="./images/img6.jpg"
                   alt="Marketing Online Courses"
@@ -167,8 +167,8 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio-item">
-              <a class="list link" href="">
+            <li class="portfolio-list">
+              <a class="portfolio-item link" href="">
                 <img
                   src="./images/img7.jpg"
                   alt="Design Instagram Stories Concept"
@@ -181,8 +181,8 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio-item">
-              <a class="list link" href="">
+            <li class="portfolio-list">
+              <a class="portfolio-item link" href="">
                 <img src="./images/img8.jpg" alt="Web Site Organic Food" width="360" height="300" />
                 <div class="portfolio-card">
                   <h2 class="subtitle subtitle-card"> Organic Food </h2>
@@ -190,8 +190,8 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio-item">
-              <a class="list link" href="">
+            <li class="portfolio-list">
+              <a class="portfolio-item link" href="">
                 <img src="./images/img9.jpg" alt="Web Site Fresh Coffee" width="360" height="300" />
                 <div class="portfolio-card">
                   <h2 class="subtitle subtitle-card"> Fresh Coffee </h2>
